--- a/src/Sitko.Grpc.Tools.Php/Sitko.Grpc.Tools.Php.csproj
+++ b/src/Sitko.Grpc.Tools.Php/Sitko.Grpc.Tools.Php.csproj
@@ -6,9 +6,9 @@
 
   <ItemGroup>
     <PackageReference Include="Grpc.Tools" Version="2.32.0" PrivateAssets="None" />
-    <None Pack="true" PackagePath="buildTransitive" Include="Build\**\*.xml; Build\**\*.props; Build\**\*.targets;" />
-    <None Pack="true" PackagePath="tools" Include="Tools\*;" />
-    <None Pack="true" PackagePath="proto" Include="Proto\*;" />
+    <None Pack="true" PackagePath="buildTransitive" Include="Build/**/*.xml; Build/**/*.props; Build/**/*.targets;" />
+    <None Pack="true" PackagePath="tools" Include="Tools/*;" />
+    <None Pack="true" PackagePath="proto/google/protobuf" Include="Proto/google/protobuf/*.proto;" />
   </ItemGroup>
 
 </Project>
