use relative paths

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,9 +33,9 @@ jobs:
             -   name: Copy gRPC files to project dir
                 working-directory: tmp/grpc
                 run: |
-                    cp bins/opt/grpc_php_plugin ${{ github.workspace }}/src/Sitko.Grpc.Tools.Php/Tools/grpc_php_client_plugin
-                    cp bins/opt/protobuf/protoc ${{ github.workspace }}/src/Sitko.Grpc.Tools.Php/Tools/protoc
-                    mkdir -p ${{ github.workspace }}/src/Sitko.Grpc.Tools.Php/Proto/google/protobuf
-                    cp third_party/protobuf/src/google/protobuf/*.proto ${{ github.workspace }}/src/Sitko.Grpc.Tools.Php/Proto/google/protobuf
+                    cp bins/opt/grpc_php_plugin ../../src/Sitko.Grpc.Tools.Php/Tools/grpc_php_plugin
+                    cp bins/opt/protobuf/protoc ../..src/Sitko.Grpc.Tools.Php/Tools/protoc
+                    mkdir -p ../../src/Sitko.Grpc.Tools.Php/Proto/google/protobuf
+                    cp third_party/protobuf/src/google/protobuf/*.proto ../..src/Sitko.Grpc.Tools.Php/Proto/google/protobuf
             -   name: Create package
                 run: dotnet pack -c Release
