--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ jobs:
         runs-on: ubuntu-latest
         container: ghcr.io/sitkoru/actions-container
         env:
-            GRPC_VERSION: v1.35.0
+            GRPC_VERSION: v1.37.x
         steps:
             -   uses: actions/checkout@v2
             -   name: Prepare
