--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@ on:
 jobs:
     build:
         runs-on: ubuntu-latest
-        container: ghcr.io/sitkoru/actions-container
+        container: mcr.microsoft.com/dotnet/sdk:5.0
         env:
             GRPC_VERSION: v1.37.x
         steps:
@@ -19,9 +19,6 @@ jobs:
                 run: |
                     VERSION=${GITHUB_REF#refs/tags/}
                     echo ::set-output name=version::${VERSION}
-            -   uses: actions/setup-dotnet@v1.8.0
-                with:
-                    dotnet-version: '5.0.x'
             -   name: Install build dependecies
                 run: apt update && apt-get install -y build-essential autoconf libtool pkg-config cmake
             -   name: Clone grpc repo
