fix(ci): run semantic release on ubuntu-latest

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
         run: dotnet pack -c Release
   release:
     name: Release
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     container: ghcr.io/sitkoru/actions-container
     needs: [ build ]
     if: ${{ github.event_name == 'push' }}
